--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Helvetica:wght@300;400;700;800&display=swap");
-
 /* =================
 BODY STYLE 
 ===================*/
@@ -27,7 +25,7 @@ BODY STYLE
 
 .sidetext {
   transform-origin: 0 0;
-  top: 85%;
+  top: 40vh;
   margin-left: 2.5vw;
 }
 
@@ -1108,7 +1106,7 @@ Screen Sizes
   }
 
   .sidetext {
-    top: 75%;
+    top: 50vh;
     margin-left: 2.1vw;
   }
 
@@ -1194,7 +1192,7 @@ Screen Sizes
 
 @media (max-width: 1000px) {
   .sidetext {
-    top: 70%;
+    top: 40vh;
     margin-left: 1.6vw;
   }
 
@@ -1401,7 +1399,7 @@ Screen Sizes
   }
 
   .sidetext {
-    top: 550px;
+    top: 30vh;
     margin-left: 1.6vw;
   }
 
@@ -1601,7 +1599,7 @@ Screen Sizes
     width: 40vw;
   }
   .sidetext {
-    top: 400px;
+    top: 20vh;
     margin-left: 1.2vw;
   }
 
@@ -1682,7 +1680,7 @@ Screen Sizes
 
 @media (max-width: 380px) {
   .sidetext {
-    top: 400px;
+    top: 30vh;
     margin-left: 0.3vw;
   }
 
@@ -1695,7 +1693,7 @@ Screen Sizes
   }
 
   #h4 {
-    font-size: 0.2rem;
+    font-size: 0.5rem;
   }
 
   #TextBody {
