--- a/style.css
+++ b/style.css
@@ -1325,14 +1325,6 @@ Screen Sizes
       opacity: 1;
     }
 
-    50% {
-      opacity: 1;
-    }
-
-    75% {
-      opacity: 1;
-    }
-
     100% {
       opacity: 1;
     }
@@ -1565,15 +1557,11 @@ Screen Sizes
       opacity: 0;
     }
 
-    45% {
+    40% {
       opacity: 0;
     }
 
-    50% {
-      opacity: 0;
-    }
-
-    75% {
+    65% {
       opacity: 1;
     }
 
@@ -1601,17 +1589,39 @@ Screen Sizes
       opacity: 0;
     }
 
-    75% {
+    60% {
       opacity: 0;
     }
 
-    90% {
+    80% {
       opacity: 1;
     }
 
     100% {
       opacity: 1;
     }
+  }
+}
+
+.particleShower.active > svg > g > #pfourth {
+  opacity: 0;
+  animation: fourthdashsm 12s ease-out infinite;
+}
+
+@keyframes fourthdashsm {
+  0% {
+    opacity: 0;
+  }
+
+  75% {
+    opacity: 0;
+  }
+
+  95% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
   }
 }
 
