--- a/style.css
+++ b/style.css
@@ -498,7 +498,6 @@ Grid System 1 Style
   z-index: 990;
 }
 
-
 #mars {
   animation: 2s ease-out 1s slideInFromLeft;
   animation-fill-mode: forwards;
@@ -765,22 +764,20 @@ Grid System 1 Style
   z-index: 990;
 }
 
-
 .Rocket.active {
   animation: flyanim 5s ease-in-out forwards;
   -webkit-animation: flyanim 5s ease-in-out forwards;
 }
 
-  @keyframes flyanim {
-    0% {
-      transform: translate(0px, 0px);
-    }
-
-    100% {
-      transform: translate(-30px, -100px);
-    }
+@keyframes flyanim {
+  0% {
+    transform: translate(0px, 0px);
   }
 
+  100% {
+    transform: translate(-30px, -100px);
+  }
+}
 
 .afterburn.active {
   stroke-dasharray: 350;
@@ -1096,6 +1093,13 @@ Grid System 1 Style
     transition: transform;
     transform: translateX(55%);
   }
+}
+
+.triumfLogo {
+  position: absolute;
+  bottom: 5vh;
+  left: 4.5vw;
+z-index: 5000;
 }
 
 /* =================
@@ -1647,7 +1651,7 @@ Screen Sizes
     left: 6vw;
   }
 
- #DeepSpaceText {
+  #DeepSpaceText {
     top: 40vw;
     margin-top: 170px;
     right: 20vw;
@@ -1662,7 +1666,7 @@ Screen Sizes
     margin-top: 100px;
   }
 
- #LowEarthText {
+  #LowEarthText {
     width: 40vw;
     top: 62vw;
     margin-top: 110px;
@@ -1686,83 +1690,81 @@ Screen Sizes
     z-index: 3010;
   }
 
- 
+  @media (max-width: 380px) {
+    .sidetext {
+      top: 30vh;
+      margin-left: 0.3vw;
+    }
 
-@media (max-width: 380px) {
-  .sidetext {
-    top: 30vh;
-    margin-left: 0.3vw;
+    #TextTitle {
+      font-size: 0.5rem;
+    }
+
+    #h3 {
+      font-size: 0.5rem;
+    }
+
+    #h4 {
+      font-size: 0.5rem;
+    }
+
+    #TextBody {
+      font-size: 0.5rem;
+    }
+
+    #gridsystem1 #RadiationText {
+      width: 50vw;
+      top: 5vw;
+      left: 6vw;
+    }
+
+    #gridsystem1 #DeepSpaceText {
+      top: 40vw;
+      margin-top: 180px;
+      right: 20vw;
+      width: 35vw;
+    }
+
+    #gridsystem1 #GeoText {
+      width: 42vw;
+      left: 14vw;
+      margin-left: 30vw;
+      top: 20vw;
+      margin-top: 130px;
+    }
+
+    #gridsystem1 #LowEarthText {
+      width: 40vw;
+      top: 50vw;
+      margin-top: 120px;
+      right: 40vw;
+      margin-right: 50px;
+    }
+
+    #gridsystem1 #AirplaneText {
+      margin-left: 10vw;
+      top: 65vw;
+    }
+
+    .topright {
+      position: absolute;
+      top: 52vw;
+      right: 9vw;
+      margin-right: 125px;
+    }
+
+    #gridsystem1 #Powerstation {
+      margin-right: 150px;
+      margin-top: 65vw;
+    }
   }
 
-  #TextTitle {
-    font-size: 0.5rem;
+  .reveal {
+    opacity: 0;
+    transition: all 3s ease-in-out;
   }
 
-  #h3 {
-    font-size: 0.5rem;
+  .reveal.active {
+    opacity: 1;
   }
-
-  #h4 {
-    font-size: 0.5rem;
-  }
-
-  #TextBody {
-    font-size: 0.5rem;
-  }
-
-  #gridsystem1 #RadiationText {
-    width: 50vw;
-    top: 5vw;
-    left: 6vw;
-  }
-
-  #gridsystem1 #DeepSpaceText {
-    top: 40vw;
-    margin-top: 180px;
-    right: 20vw;
-    width: 35vw;
-  }
-
-  #gridsystem1 #GeoText {
-    width: 42vw;
-    left: 14vw;
-    margin-left: 30vw;
-    top: 20vw;
-    margin-top: 130px;
-  }
-
-  #gridsystem1 #LowEarthText {
-    width: 40vw;
-    top: 50vw;
-    margin-top: 120px;
-    right: 40vw;
-    margin-right: 50px;
-  }
-
-  #gridsystem1 #AirplaneText {
-    margin-left: 10vw;
-    top: 65vw;
-  }
-
-  .topright {
-    position: absolute;
-    top: 52vw;
-    right: 9vw;
-    margin-right: 125px;
-  }
-
-  #gridsystem1 #Powerstation {
-    margin-right: 150px;
-    margin-top: 65vw;
-  }
-}
-
-.reveal {
-  opacity: 0;
-  transition: all 3s ease-in-out;
-}
-
-.reveal.active {
-  opacity: 1;
-}
 }
