--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ Welcome Modal
 
 .modal-welcome {
   overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
   height: calc(85vh - 200px);
   font-family: Helvetica;
   letter-spacing: 1.5px;
@@ -120,6 +122,11 @@ Welcome Modal
   line-height: 30px;
   color: white;
   transition: opacity 0.7s;
+}
+.modal-welcome::-webkit-scrollbar {
+  /* WebKit */
+  width: 0;
+  height: 0;
 }
 
 .language-buttons {
@@ -1665,7 +1672,6 @@ Screen Sizes
 
   #Powerstation {
     margin-right: 40px;
-
   }
   .powerstation {
     width: 17vw;
@@ -1947,7 +1953,6 @@ Screen Sizes
 
     #gridsystem1 #Powerstation {
       margin-right: 150px;
-
     }
   }
 
